// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extracts TOC When maxDepth is not set it should have extracted TOC correctly 1`] = `
Array [
  Array [
    "README.md",
    Array [],
  ],
  Array [
    "docs/about.md",
    Array [
      Object {
        "depth": 2,
        "id": "history",
        "title": "History",
      },
      Object {
        "depth": 2,
        "headings": Array [
          Object {
            "depth": 3,
            "id": "but-why",
            "title": "But why?",
          },
        ],
        "id": "where-it-came-from",
        "title": "Where it came from",
      },
      Object {
        "depth": 2,
        "id": "another-topic",
        "title": "Another topic",
      },
      Object {
        "depth": 2,
        "headings": Array [
          Object {
            "depth": 3,
            "id": "3-level",
            "title": "3 level",
          },
          Object {
            "depth": 3,
            "headings": Array [
              Object {
                "depth": 4,
                "headings": Array [
                  Object {
                    "depth": 5,
                    "headings": Array [
                      Object {
                        "depth": 6,
                        "id": "6-level",
                        "title": "6 level",
                      },
                    ],
                    "id": "5-level",
                    "title": "5 level",
                  },
                ],
                "id": "4-level",
                "title": "4 level",
              },
              Object {
                "depth": 4,
                "id": "4-level-2nd",
                "title": "4 level 2nd",
              },
            ],
            "id": "3-level-2nd",
            "title": "3 level 2nd",
          },
        ],
        "id": "2-level",
        "title": "2 level",
      },
    ],
  ],
  Array [
    "docs/how-it-works.md",
    Array [],
  ],
  Array [
    "packages/package1/components/button.md",
    Array [],
  ],
  Array [
    "packages/package1/docs/intro.md",
    Array [],
  ],
  Array [
    "packages/package2/docs/overview.md",
    Array [],
  ],
  Array [
    "packages/package2/docs/styles.md",
    Array [],
  ],
  Array [
    "packages/package1/components/form/index.md",
    Array [],
  ],
]
`;

exports[`Extracts TOC When maxDepth is set it should have extracted TOC correctly 1`] = `
Array [
  Array [
    "README.md",
    Array [],
  ],
  Array [
    "docs/about.md",
    Array [
      Object {
        "depth": 2,
        "id": "history",
        "title": "History",
      },
      Object {
        "depth": 2,
        "headings": Array [
          Object {
            "depth": 3,
            "id": "but-why",
            "title": "But why?",
          },
        ],
        "id": "where-it-came-from",
        "title": "Where it came from",
      },
      Object {
        "depth": 2,
        "id": "another-topic",
        "title": "Another topic",
      },
      Object {
        "depth": 2,
        "headings": Array [
          Object {
            "depth": 3,
            "id": "3-level",
            "title": "3 level",
          },
          Object {
            "depth": 3,
            "headings": Array [
              Object {
                "depth": 4,
                "id": "4-level",
                "title": "4 level",
              },
              Object {
                "depth": 4,
                "id": "4-level-2nd",
                "title": "4 level 2nd",
              },
            ],
            "id": "3-level-2nd",
            "title": "3 level 2nd",
          },
        ],
        "id": "2-level",
        "title": "2 level",
      },
    ],
  ],
  Array [
    "docs/how-it-works.md",
    Array [],
  ],
  Array [
    "packages/package1/components/button.md",
    Array [],
  ],
  Array [
    "packages/package1/docs/intro.md",
    Array [],
  ],
  Array [
    "packages/package2/docs/overview.md",
    Array [],
  ],
  Array [
    "packages/package2/docs/styles.md",
    Array [],
  ],
  Array [
    "packages/package1/components/form/index.md",
    Array [],
  ],
]
`;
